--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hi</h1>
+
+    <div class="terminal">
+      <p>Debian 12 TTY</p>
+      <br>
+      <p>mateias.xyz login: David A. Mateis</p>
+      <p>Password:</p>
+      <br>
+      <p class="prompt"> 
+        interests
+      </p>
+      
+      <p class="stdout">
+        Hello, I am David, a highschool student from Bucharest, Romania, who loves physics and computers.
+        <br>
+        ---
+        <br>
+        &lt;3 Debian and i3
+      </p>
+
+      <p class="prompt"> 
+        <span class="cursor">&nbsp;</span>
+      </p>
+    </div>
+    
   </body>
 </html>
