--- a/index.html
+++ b/index.html
@@ -15,21 +15,15 @@
       <p>mateias.xyz login: David A. Mateis</p>
       <p>Password:</p>
       <br>
-      <p class="prompt"> 
-        interests
-      </p>
       
-      <p class="stdout">
-        Hello, I am David, a highschool student from Bucharest, Romania, who loves physics and computers.
-        <br>
-        ---
-        <br>
-        &lt;3 Debian and i3
-      </p>
 
       <p class="prompt"> 
-        <span class="cursor">&nbsp;</span>
+        vim&nbsp;<span class="cursor">&nbsp;</span>
       </p>
+      <div class="auto-complete">
+        <a href="bio.html" class="terminal-link">bio</a>
+        <a href="timeline.html" class="terminal-link">timeline</a>
+      </div>
     </div>
     
   </body>
