Changed some visuals

--- a/index.html
+++ b/index.html
@@ -10,12 +10,32 @@
   <body>
 
     <div class="terminal">
-      <p>Debian 12 TTY</p>
+      <p>Debian 13 TTY</p>
       <br>
       <p>mateias.xyz login: David A. Mateis</p>
       <p>Password:</p>
       <br>
       
+      <p>Logged in as: </p>
+      
+      <p>
+<pre>
+                         $$\               $$\                       $$$\ $$\       $$$\   
+                         $$ |              \__|                     $$  _|$$ |       \$$\  
+$$$$$$\$$$$\   $$$$$$\ $$$$$$\    $$$$$$\  $$\  $$$$$$\   $$$$$$$\ $$  /  $$$$$$$\    \$$\ 
+$$  _$$  _$$\  \____$$\\_$$  _|  $$  __$$\ $$ | \____$$\ $$  _____|$$ |   $$  __$$\    $$ |
+$$ / $$ / $$ | $$$$$$$ | $$ |    $$$$$$$$ |$$ | $$$$$$$ |\$$$$$$\  $$ |   $$ |  $$ |   $$ |
+$$ | $$ | $$ |$$  __$$ | $$ |$$\ $$   ____|$$ |$$  __$$ | \____$$\ \$$\   $$ |  $$ |  $$  |
+$$ | $$ | $$ |\$$$$$$$ | \$$$$  |\$$$$$$$\ $$ |\$$$$$$$ |$$$$$$$  | \$$$\ $$ |  $$ |$$$  / 
+\__| \__| \__| \_______|  \____/  \_______|\__| \_______|\_______/   \___|\__|  \__|\___/
+</pre> 
+      </p>    
+
+      <br>
+
+      <p>You do not have any new mail.</p>
+
+      <br>
 
       <p class="prompt"> 
         vim&nbsp;<span class="cursor">&nbsp;</span>
