--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
     <div class="terminal">
       <p>Debian 13 TTY</p>
       <br>
-      <p>mateias.xyz login: David A. Mateis</p>
+      <p>mateias.xyz login: David A. Mateiș</p>
       <p>Password:</p>
       <br>
       
       <p>Logged in as: </p>
       
       <p>
-<pre>
-                         $$\               $$\                       $$$\ $$\       $$$\   
-                         $$ |              \__|                     $$  _|$$ |       \$$\  
-$$$$$$\$$$$\   $$$$$$\ $$$$$$\    $$$$$$\  $$\  $$$$$$\   $$$$$$$\ $$  /  $$$$$$$\    \$$\ 
-$$  _$$  _$$\  \____$$\\_$$  _|  $$  __$$\ $$ | \____$$\ $$  _____|$$ |   $$  __$$\    $$ |
-$$ / $$ / $$ | $$$$$$$ | $$ |    $$$$$$$$ |$$ | $$$$$$$ |\$$$$$$\  $$ |   $$ |  $$ |   $$ |
-$$ | $$ | $$ |$$  __$$ | $$ |$$\ $$   ____|$$ |$$  __$$ | \____$$\ \$$\   $$ |  $$ |  $$  |
-$$ | $$ | $$ |\$$$$$$$ | \$$$$  |\$$$$$$$\ $$ |\$$$$$$$ |$$$$$$$  | \$$$\ $$ |  $$ |$$$  / 
-\__| \__| \__| \_______|  \____/  \_______|\__| \_______|\_______/   \___|\__|  \__|\___/
+<pre class="ascii-art-title">
+                    __                                   _   __       __     
+                   /\ \__         __                   /' \ /\ \     /\ `\   
+  ___ ___      __  \ \ ,_\    __ /\_\     __      ____/\  /'\ \ \___ \`\  \  
+/' __` __`\  /'__`\ \ \ \/  /'__`\/\ \  /'__`\   /' __\ \ \  \ \  _ `\`\`\ \ 
+/\ \/\ \/\ \/\ \_\ \_\ \ \_/\  __/\ \ \/\ \_\ \_/\__  `\ \ `\ \ \ \ \ \ \/  \
+\ \_\ \_\ \_\ \__/ \_\\ \__\ \____\\ \_\ \__/ \_\/\____/\ `\__\\ \_\ \_\/\__/
+ \/_/\/_/\/_/\/__/\/_/ \/__/\/____/ \/_/\/__/\/_/\/___/  `\/_/  \/_/\/_/\/_/
 </pre> 
       </p>    
 
