Change username to just "david"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="terminal">
       <p>Debian 13 TTY</p>
       <br>
-      <p>mateias.xyz login: David A. Mateiș</p>
+      <p>mateias.xyz login: david</p>
       <p>Password:</p>
       <br>
       
